tests/negative/meta_capacity_string.disturb
n = (number){1};
n.capacity = "x";
